# ePass

./: .gitignore  .gitmodules  CHANGELOG.md  README.md
.github/workflows/: build.yml  test.yml
IR/: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  Readme.md  add_constraint_pass.c  add_counter_pass.c  add_stack_offset.c  array.c  array.h  bpf_ir.c  bpf_ir.h  cut_bb_pass.c  dbg.h  format.sh  ir_bb.c  ir_bb.h  ir_code_gen.c  ir_error.c  ir_helper.c  ir_helper_cg.c  ir_insn.c  ir_insn.proto.c  ir_value.c  lii.c  list.h  live_variable.c  passes.h  phi_pass.c  probe.c  prog_check.c  reachable_bb.c  reachable_bb.h  read.c  read.h
IR/aux/: add_stack_offset.c  coaleasing.c  conflict_analysis.c  disasm.c  eliminate_ssa.c  explicit_reg.c  fix_bb_succ.c  flatten.c  graph_coloring.c  kern_utils.c  live_variable.c  normalize.c  prog_check.c  relocate.c  spill.c  stack_alloc.c  translate.c
IR/docs/: CG.md  Config.md  IR.md  Lift.md  Type.md  Userspace.md  Verifier.md
IR/include/: add_constraint_pass.h  add_counter_pass.h  add_stack_offset.h  array.h  bpf_ir.h  code_gen.h  constraint.h  cut_bb_pass.h  dbg.h  eliminate_ssa.h  error.h  ext.h  ir_bb.h  ir_error.h  ir_fun.h  ir_helper.h  ir_insn.h  list.h  passes.h  phi_pass.h  prog_check.h  reachable_bb.h  read.h
IR/include/linux/: bpf_ir.h
IR/loader/: loader.c
IR/passes/: add_constraint_pass.c  add_counter_pass.c  cut_bb_pass.c  end_bb.c  phi_pass.c  reachable_bb.c  translate_throw.c
IR/scripts/: format.sh  gen_insn_ctor.py  gen_kernel.sh  helpers.txt
IR/tests/: Makefile  alu64.c  b2b.c  loop1.c  loop2.c  loop3.c  mask.c  mem1.c  mem2.c  mem3_nop.c  memerr1.c  ringbuf.c  simple1-2.c  simple1.c  simple2.c  str.c  test_asm.c
IR/tests/log/: loop1.txt  loop1_ker.txt  mask_ker.txt
IR/userspace/: print.c  printlog.c  read.c  readlog.c  test_kern.c  test_masking.c  userspace.h
cli/: Cargo.toml  build.rs
cli/src/: main.rs
core/: .clang-tidy  .gitignore  Bugs.md  CMakeLists.txt  Makefile  Readme.md  TODO.md  array.c  bpf_ir.c  hashtbl.c  ir_bb.c  ir_cg.c  ir_cg_norm.c  ir_cg_norm_v2.c  ir_cg_ssa.c  ir_cg_v2.c  ir_code_gen.c  ir_helper.c  ir_insn.c  ir_value.c  lli.c  out  ptrset.c
core/aux/: cg_prog_check.c  disasm.c  ir_utils.c  kern_utils.c  prog_check.c
core/bpftests/: Makefile  asm.c  compact_opt.c  empty.c  exit.c  falco  goto.c  list.c  localcall.c  mem2.c  msan.c  neg.c  product.c  readmap.c  ringbuf.c  simple1.c  simple2.c  simple_product.c  spillconst.c  stackmem.c  tailcall.c  tailcall_us.c  test_asm.c  test_asm_easy.c  test_spill.c  uninit1.c
core/bpftests/log/: loop1_gen.txt  simple1.txt  simple1_v.txt  test1.txt  test2.txt
core/docs/: CG.md  Common.md  IR.md
core/epasstool/: CMakeLists.txt  epasstool.c  epasstool.h  load.c  print.c  printlog.c  read.c  readload.c  readlog.c  test_pass1.c
core/include/: ir.h  ir_cg.h
core/include/linux/: bpf.h  bpf_ir.h  hash.h  hashtable.h  list.h
core/passes/: add_counter_pass.c  cg_prepare.c  code_compaction.c  constraint.c  div_by_zero.c  ecall.c  insn_counter_pass.c  jmp_complexity.c  msan.c  optimization.c  phi_pass.c  probe_read_user.c  translate_throw.c
core/scripts/: buildobj.sh  cp_src.sh  format.sh  gen_insn_ctor.py  gen_kernel.sh
core/tests/: 1mloop.c  Makefile  alu64.c  compact_opt.c  complex.c  loop3r.c  lsm.c  map1.c  mem1.c  mem3_nop.c  test_asm.c  test_hashtable.c  test_list.c  test_ptrset.c  uninit1.c
core/tests/log/: bpftrace1.txt
core/userspace/: epasstool.c  print.c  printlog.c  read.c  readload.c  readlog.c  test_kern.c  test_masking.c  test_pass1.c  userspace.h
docs/: CG.md  CONTRIBUTION_GUIDE.md  CREATE_INSTRUCTION.md  EPASS_OPTIONS.md  IR.md  KERNEL_TESTING.md  Lift.md  TESTING.md  TODO.md  USERSPACE_TESTING.md  architecture.typ
experiments/: list.c
exploits/: cve-experiments.md  objtool.patch
exploits/cve-2021-31440/: exploit.c  exploit_2.c
exploits/cve-2022-23222/: Makefile
rejected/: Makefile  Summary.md  asm.c  bound.c  complex4.c  cross_stack_pointer.c  cve-experiments.md  dereference.c  div_by_zero.c  extraspace.c  jump.c  loop.c  loop.list  loop2.c  looplimit.c  map_val_accepted.c  mask.c  masking2.c  maskings1.c  memory.c  pointer.c  pointer_dereference.c  q_complex_pointer_chase.c  q_direct_kernel_mem_access.c  q_dynamic_malloc.c  q_exceed_stack.c  q_indirect_func_call.c  q_large_call_stack.c  q_mem_access_outside_bpf_ctx.c  q_nonlin_mem_access.c  q_out_of_bound.c  q_pointer_arithmetic.c  q_simple_bound.c  q_stack_read_before_write.c  q_toolong.c  q_toomany_helper_fun.c  rejected_uninit_var_ret.c  toolong.c  unbound_variable.c  verifier.list  (+2 more)
rejected/custom/: .gitignore  Makefile  b2b.c  b2b.s  complex.c  complex.s  complex3.c  loop1.s  loop2.c  loop3.c  test_asm.c  test_asm.s
test/: .gitignore  Makefile  README.md  count_obj.py  env.example.py  evaluate.py  gen_tests.sh  pyproject.toml  run_tests.sh  runtest.py  test.ipynb  test.py  time
test/aux/: fork.c
test/evaluation/compile_speed/: speed_100.c  speed_120.c  speed_20.c  speed_30.c  speed_50.c  speed_70.c
test/evaluation/counter/: Readme.md  complex.c  complex2.c  loop1.c  loop1med.c  loop1sim.c  loop2.c  loop3.c  loop4.c  loopnested.c  loopwithif.c
test/evaluation/div_by_zero/: div_by_zero2.c
test/evaluation/km/: Makefile  benchuser.c  llbench.c  llbench_bpf.c  llbench_delete_bpf.c  llbench_lookup_bpf.c  loader.c  syscall.c  syscall_user.c
test/evaluation/kmbst/: Makefile  bst_bpf.c  bstkm.c  syscall_user.c
test/evaluation/masking/: map_val_accepted.c  map_val_rejected.c  mask.c
test/evaluation/msan/: Readme.md  msan1.c  msan2.c  msan3.c  simpl1.c  simpl2.c  simpl3.c
test/pass/: insn_counter_pass.c  jmp_complexity.c  masking.c  msan.c  optimization.c
test/progs/: b2b.c  counter.c  filter.c  fn_nonrejected_uninit_var_access.c  fn_oob.c  hashmap.c  latency.c  str.c
test/progs/Thejokr_ebpf-playground/: README.md  go.h  probe.c  regs.h
test/progs/falco/: prog10.txt  prog100.txt  prog101.txt  prog102.txt  prog103.txt  prog104.txt  prog105.txt  (+326 more)
tools/: err.txt  helper.py  initvm.sh  prepvm.sh  startkflex.sh  startvm.sh  verifier.py
(+218 files in other folders)
